# AeeronLayer

./: .env.example  .eslintrc.json  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: app.ts  index.ts  server.ts
apps/api/src/events/: EventBus.ts  WsHub.ts
apps/api/src/indexer/: onChainIndexer.ts
apps/api/src/lib/: logger.ts  solana.ts  webhook.ts
apps/api/src/middleware/: budgetGuard.ts  errorHandler.ts  rateLimiter.ts  requestLogger.ts  tokenGate.ts  validateBody.ts  validateParams.ts
apps/api/src/monitor/: AgentHealthMonitor.ts  index.ts
apps/api/src/routes/: accept.ts  agents.ts  batchRouter.ts  channels.ts  fees.ts  gatewayRouter.ts  health.ts  index.ts  intents.ts  payments.ts  proof.ts  sessions.ts  webhooks.ts
apps/dashboard/: index.html  package.json  tailwind.config.ts
apps/dashboard/src/: App.tsx  index.css  main.tsx
docs/: architecture.md  quickstart.md  token-launch.md  tokenomics.md  x402-specification.md
programs/aeeron-protocol/: Cargo.toml
programs/aeeron-protocol/src/: errors.rs  lib.rs  state.rs
programs/aeeron-protocol/src/instructions/: close_channel.rs  direct_pay.rs  emit_receipt.rs  fund_channel.rs  mod.rs  open_channel.rs  register_nonce.rs  settle_payment.rs
programs/aeeron-protocol/src/utils/: mod.rs
programs/aeeron-verifier/: Anchor.toml  Cargo.toml
programs/aeeron-verifier/src/: lib.rs
programs/aeeron-verifier/tests/: settle.ts
scripts/src/: deploy-devnet.ts
(+19 files in other folders)
