[package]
name = "aeeron-protocol"
version = "0.1.0"
description = "Aeeron x402 sovereign payment protocol for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeeron_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-program = "1.18.22"

[dev-dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
